changed to postgres

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -14,18 +14,18 @@
 
 .content {
   position: relative;
-  top: 30%;
+  top: -6em;
   z-index: 2;
   margin: 0 auto;
   text-align: center;
   background-image: url("main.jpeg");
   background-size: cover;
-  height: 32em;
+  height: 51em;
   width: 100%;
 
   .content-heading {
     margin-bottom: 24px;
-    color: white;
+    color: #064d73;
     font-size: 44px;
   }
 
