--- a/app/views/pages/_main.html.erb
+++ b/app/views/pages/_main.html.erb
@@ -1,5 +1,5 @@
 <video id="main-video" class="video" autoplay="autoplay" loop="loop" muted="" height="350px" width="600px">
-  <source src="../../assets/videos/main.mp4" type="video/mp4" />
+  <source src="main.mp4" type="video/mp4" />
 </video>
 <div class="main content">
     <h1 class="content-heading">Lera Consulting Group, Inc.</h1>
