--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -18,7 +18,7 @@
   z-index: 2;
   margin: 0 auto;
   text-align: center;
-  background-image: url("main.jpeg");
+  background-image: image-url("main.jpeg");
   background-size: cover;
   height: 51em;
   width: 100%;
