stylized landing and added images for services, clients, and about

--- a/app/views/pages/_main.html.erb
+++ b/app/views/pages/_main.html.erb
@@ -1,6 +1,18 @@
-<video id="main-video" class="video" autoplay="autoplay" loop="loop" muted="" height="350px" width="600px">
+<!-- <video id="main-video" class="video" autoplay="autoplay" loop="loop" muted="" height="350px" width="600px">
   <source src="main.mp4" type="video/mp4" />
-</video>
+</video> -->
 <div class="main content">
     <h1 class="content-heading">Lera Consulting Group, Inc.</h1>
+    <span class="glyphicon glyphicon-menu-down"></span>
+</div>
+<div class="main two">
+  <div class="services two-image">
+    <%= image_tag "services" %>
+  </div>
+  <div class="clients two-image">
+    <%= image_tag "clients" %>
+  </div>
+  <div class="about two-image">
+    <%= image_tag "about" %>
+  </div>
 </div>
