--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,7 +1,3 @@
-.main {
-
-}
-
 .video {
   position: fixed;
   z-index: 1;
@@ -24,9 +20,15 @@
   width: 100%;
 
   .content-heading {
-    margin-bottom: 24px;
-    color: #064d73;
-    font-size: 44px;
+    position: relative;
+    top:2em;
+    color: white;
+    // color: #3a4f5a;
+    // color: #51829c;
+    // color: #466373;
+    font-size: 5em;
+    font-weight: bolder;
+    text-shadow: #51829c 0px 0px 10px;
   }
 
   .content-teaser {
@@ -43,5 +45,35 @@
     font-size: 22px;
     text-decoration: none;
     border: solid 4px rgb(255,60,100);
+  }
+
+  .glyphicon-menu-down {
+    color: white;
+    font-size: 4em;
+    content: "\e259";
+    position: absolute;
+    top: 10em;
+    padding: 1em 0 30em;
+
+    &:hover{
+      text-shadow: #fff 0px 0px 10px;
+    }
+  }
+}
+.two {
+  width: 100%;
+  text-align: center;
+  margin: 1em auto;
+
+  .two-image {
+    display: inline;
+
+    img {
+      height: 20em;
+      width: 20em;
+      border-radius: 100%;
+      margin: 0 4em;
+      border: solid white 8px;
+    }
   }
 }
