--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -10,7 +10,7 @@
 
 html {
 	display: flex;
-	background-color: skyblue;
+	background-color: #88b4d6;
   height: 100%;
   margin: 0;
   padding: 0;
@@ -22,5 +22,5 @@ body {
   padding: 0;
 	width: 100%;
   height: 100%;
-	background-color: skyblue;
+	background-color: #88b4d6;
 }
