--- a/app/views/pages/_main.html.erb
+++ b/app/views/pages/_main.html.erb
@@ -3,16 +3,47 @@
 </video> -->
 <div class="main content">
     <h1 class="content-heading">Lera Consulting Group, Inc.</h1>
-    <span class="glyphicon glyphicon-menu-down"></span>
+    <a href="#two">
+      <span class="glyphicon glyphicon-menu-down"></span>
+    </a>
 </div>
-<div class="main two">
+<div class="main" id="two">
   <div class="services two-image">
     <%= image_tag "services" %>
+    <h2>Our Services</h2>
   </div>
   <div class="clients two-image">
     <%= image_tag "clients" %>
+    <h2>Our Clients</h2>
   </div>
   <div class="about two-image">
     <%= image_tag "about" %>
+    <h2>About Us</h2>
+  </div>
+
+  <div class="entry-content">
+    <h2>Welcome to Lera Consulting Group, Inc.</h2>
+    <p>Lera Consulting Group, Inc. provides a wide variety of customized Human
+      Resources consulting services to meet your business needs. Established in
+      1998, we are a south Florida-based company with over 50 years of experience
+      in both the corporate and consulting worlds. By effectively building relationships
+      with you, we can best understand your organization and your people and align programs
+      and services with your company’s strategy, goals, and culture.</p>
+
+    <h2>Our Mission</h2>
+    <p>Our mission is to effectively partner with clients to enhance potential
+      and productivity at the individual level in order to successfully impact
+      performance at the organization level.</p>
+
+    <h2>What Makes Lera Different?</h2>
+    <ul>
+      <li><b>Customization. </b> We customize our programs and services. There is no one-size-fits-all mentality here.</li>
+    </ul>
+    <ul>
+      <li><b>Relationships. </b> We build relationships with our clients. We get to know you and your organization.</li>
+    </ul>
+    <ul>
+      <li><b>Experience. </b> We have over 50 years of experience in both the corporate and consulting worlds.</li>
+    </ul>
   </div>
 </div>
