--- a/app/views/pages/_navbar.html.erb
+++ b/app/views/pages/_navbar.html.erb
@@ -1,5 +1,6 @@
 <header>
   <nav>
+    <%= image_tag "logo.png", class: "logo" %>
     <span class="glyphicon glyphicon-option-vertical menu_toggle" aria-hidden="true"></span>
 
     <ul class="menu">
