--- a/app/views/pages/_main.html.erb
+++ b/app/views/pages/_main.html.erb
@@ -9,15 +9,15 @@
 </div>
 <div class="main" id="two">
   <div class="services two-image">
-    <%= image_tag "services" %>
+    <%= image_tag "services.jpeg" %>
     <h2>Our Services</h2>
   </div>
   <div class="clients two-image">
-    <%= image_tag "clients" %>
+    <%= image_tag "clients.jpeg" %>
     <h2>Our Clients</h2>
   </div>
   <div class="about two-image">
-    <%= image_tag "about" %>
+    <%= image_tag "about.jpeg" %>
     <h2>About Us</h2>
   </div>
 
