--- a/app/views/pages/_main.html.erb
+++ b/app/views/pages/_main.html.erb
@@ -12,16 +12,16 @@
     <%= image_tag "services.jpg" %>
     <h2>Our Services</h2>
   </div>
-  <div class="clients two-image">
+  <div class="courses two-image">
     <%= image_tag "clients.jpg" %>
-    <h2>Our Clients</h2>
+    <h2>Courses</h2>
   </div>
   <div class="about two-image">
     <%= image_tag "about.jpg" %>
     <h2>About Us</h2>
   </div>
 
-  <div class="entry-content">
+  <div class="info-panel">
     <h2>Welcome to Lera Consulting Group, Inc.</h2>
     <p>Lera Consulting Group, Inc. provides a wide variety of customized Human
       Resources consulting services to meet your business needs. Established in
@@ -45,5 +45,49 @@
     <ul>
       <li><b>Experience. </b> We have over 50 years of experience in both the corporate and consulting worlds.</li>
     </ul>
+  </div>
+
+  <div class="clients">
+    <div class="client-group client-group-back">
+      <div class="client-back">
+        <%= image_tag "broadspire.png", class:"client client-back" %>
+      </div>
+      <div class="client-back">
+        <%= image_tag "farmers.png", class:"client client-back" %>
+      </div>
+      <div class="client-back">
+        <%= image_tag "noven.png", class:"client client-back" %>
+      </div>
+    </div>
+    <div class="client-group client-group-left">
+      <div class="client-left">
+        <%= image_tag "balfour.png", class:"client client-left"%>
+      </div>
+      <div class="client-left">
+        <%= image_tag "embraer.png", class:"client client-left" %>
+      </div>
+      <div class="client-left">
+        <%= image_tag "mdc.png", class:"client client-left" %>
+      </div>
+    </div>
+    <div class="client-group client-group-right">
+      <div class="client-right">
+        <%= image_tag "baptist.png", class:"client client-right" %>
+      </div>
+      <div class="client-right">
+        <%= image_tag "levis.png", class:"client client-right" %>
+      </div>
+      <div class="client-right">
+        <%= image_tag "santander.png", class:"client client-right" %>
+      </div>
+    </div>
+    <div class="client-group client-group-front">
+      <div class="client-front">
+        <%= image_tag "royal.jpeg", class:"client client-front" %>
+      </div>
+      <div class="client-front">
+        <%= image_tag "ryder.png", class:"client client-front" %>
+      </div>
+    </div>
   </div>
 </div>
