--- a/app/views/pages/_main.html.erb
+++ b/app/views/pages/_main.html.erb
@@ -48,6 +48,7 @@
   </div>
 
   <div class="clients">
+    <h2>Clients</h2>
     <div class="client-group client-group-back">
       <div class="client-back">
         <%= image_tag "broadspire.png", class:"client client-back" %>
@@ -90,4 +91,6 @@
       </div>
     </div>
   </div>
+  <span class="glyphicon glyphicon-menu-left"></span>
+  <span class="glyphicon glyphicon-menu-right"></span>
 </div>
